prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_array_literal.nut
// EXPECTED: compile-time error - array literal assigned to table variable
local x: table = [1, 2, 3]
return x
